--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+
+<h1>{{title}}</h1>
+    <nav>
+       <!--<a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>-->
+       <a routerLink="/orders" routerLinkActive="active">Ordenes</a> 
+       <a routerLink="/portfolio" routerLinkActive="active">Cartera</a> 
+    </nav>
+<router-outlet></router-outlet>
+
