--- a/src/app/buy-stock/buy-stock.component.html
+++ b/src/app/buy-stock/buy-stock.component.html
@@ -1,74 +1,62 @@
 <div class="container">
   <div  [hidden]="submitted">
-    <h1>Compra de acciones</h1>
+    <h3>Compra de acciones</h3>
     <form *ngIf="active" (ngSubmit)="onSubmit()" #buyStockForm="ngForm">
-
-      <!--<div class="form-group">
-        <label for="codeStock">Especie</label>
-        <select class="form-control" id="codeStock"
-                required
-                [(ngModel)]="model.codeStock" name="codeStock" 
-                #codeStock="ngModel" >
-          <option *ngFor="let p of stocks" [value]="p.code">{{p.description}}</option>
-        </select>
-        <div [hidden]="codeStock.valid || codeStock.pristine" class="alert alert-danger">
-          Es requerido seleccionar una especie.
-        </div>
-      </div>-->
-
-
-      <h3>Advanced</h3>
-      <p-autoComplete formControlName="codeStock" 
-                      [suggestions]="filteredStocks" 
-                      (completeMethod)="filterStocks($event)" 
-                      field="code"
-                      [size]="30"
-                      [minLength]="1"  [dropdown]="true" (onDropdownClick)="handleDropdownClick($event)">
-          <template let-stock>
-              <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                   <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{stock.description}}</div>
-              </div>
-          </template>
-      </p-autoComplete>
-      <span style="margin-left:50px">Especie: {{stock.description||'none'}}</span>
-      
-
-
-
-
-
-
-
-
-
       <div class="form-group">
-        <label for="quantity">Cantidad</label>
+        <label for="codeStock">Especie</label><br>
+        <p-autoComplete [(ngModel)]="model.codeStock"
+                        [suggestions]="filteredStocks" 
+                        (completeMethod)="filterStocks($event)" 
+                        field="description"
+                        [size]="30"
+                        [minLength]="1"  [dropdown]="true" (onDropdownClick)="handleDropdownClick($event)"
+                        name="codeStock" 
+                        id="codeStock">
+            <template let-stocka>
+                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
+                    <div style="font-size:18px;float:left;margin:10px 10px 0 0">{{stocka.code}} - {{stocka.description}}</div>
+                </div>
+            </template>
+        </p-autoComplete>
+      </div>
+      <div class="form-group">
+        <label for="quantity">Cantidad</label><br>
         <input type="number" class="form-control" id="quantity"
                required
                [(ngModel)]="model.quantity" name="quantity"
-               #quantity="ngModel" >
+               #quantity="ngModel" 
+               pInputText >
         <div [hidden]="quantity.valid || quantity.pristine"  class="alert alert-danger">
           La cantidad es requerida.
         </div>
       </div>
 
        <div class="form-group">
-        <label for="price">Precio</label>
+        <label for="price">Precio</label><br>
         <input type="number" class="form-control" id="price"
                required
                [(ngModel)]="model.price" name="price"
-               #price="ngModel" >
+               #price="ngModel" 
+               pInputText>
         <div [hidden]="price.valid || price.pristine"  class="alert alert-danger">
           La cantidad es requerida.
         </div>
       </div>
 
-
-
-     
-      
+      <div class="form-group">
+        <label class="col-sm-2 control-label"> Fecha de compra</label>
+            <div class="col-sm-2">
+                <p-calendar [(ngModel)]="model.buyDate"
+                            [locale]="es"
+                            dateFormat="dd/mm/yy"
+                            name="buyDate"
+                            [showIcon]="true">
+                </p-calendar>
+            </div>
+      </div>
+      <br>
       <button type="submit" class="btn btn-default" [disabled]="!buyStockForm.form.valid">Submit</button>
-      <button type="button" class="btn btn-default" (click)="newHero()">New Hero</button>
+
     </form>
   </div>
         <!--<div [hidden]="!submitted">
