--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 
 <h1>{{title}}</h1>
-   <!-- <nav>
-       <a routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-       <a routerLink="/orders" routerLinkActive="active">Ordenes</a> 
-       <a routerLink="/portfolio" routerLinkActive="active">Cartera</a> 
-    </nav>-->
 
- <p-menubar [model]="items"></p-menubar>
+<div class="navbar-header">
+  <a class="navbar-brand" href="#">Auth0 - Angular 2</a>
+  <button class="btn btn-primary btn-margin" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
+  <button class="btn btn-primary btn-margin" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
+</div>
+
+<p-menubar [model]="items"></p-menubar>
 
 <router-outlet></router-outlet>
 
