--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,6 @@
 
 <h1>{{title}}</h1>
-
-<div class="navbar-header">
-  <a class="navbar-brand" href="#">Auth0 - Angular 2</a>
-  <button class="btn btn-primary btn-margin" (click)="auth.login()" *ngIf="!auth.authenticated()">Log In</button>
-  <button class="btn btn-primary btn-margin" (click)="auth.logout()" *ngIf="auth.authenticated()">Log Out</button>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-
-<p-menubar [model]="items"></p-menubar>
-
-<router-outlet></router-outlet>
 
